tests/errors/tuple-index-out-of-range.ari
fn main() -> i64 {
  let pair = (1, true);
  return pair.2;
}
